/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package registry.v1alpha;

import "registry/v1alpha/user.proto";

// AuthnService supplies authenication helpers.
service AuthnService {
  // GetCurrentUser gets information associated with the current user.
  //
  // The user's ID is retrieved from the request's authentication header.
  rpc GetCurrentUser(GetCurrentUserRequest) returns (GetCurrentUserResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
}

message GetCurrentUserRequest {}

message GetCurrentUserResponse {
  registry.v1alpha.User user = 1;
}